--- a/notes/How_to_access_our_shared_data_folder.ipynb
+++ b/notes/How_to_access_our_shared_data_folder.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# we can also list the contents of our shared folder \n",
     "# (once i add more data this wont be a good thing to do tho)\n",
-    "!ls /content/gdrive/My\\ Drive/EsacapeEarthData"
+    "!ls /content/gdrive/My\\ Drive/EscapeEarthData"
    ]
   },
   {
@@ -244,11 +244,12 @@
    ],
    "source": [
     "# now we can open each data file, here are some examples:\n",
+    "## NOTICE: for the path I do NOT use the \"\\\" in My\\ Drive\" like we did for the terminal commands above\n",
     "\n",
     "# for .csv files\n",
-    "data_1 = pd.read_csv('/content/gdrive/My Drive/EsacapeEarthData/2161623_lc.csv')\n",
+    "data_1 = pd.read_csv('/content/gdrive/My Drive/EscapeEarthData/2161623_lc.csv') \n",
     "# for .npy files\n",
-    "data_2 = np.load('/content/gdrive/My Drive/EsacapeEarthData/bls_powers.npy')\n",
+    "data_2 = np.load('/content/gdrive/My Drive/EscapeEarthData/bls_powers.npy')\n",
     "# let's see the data\n",
     "print('Data-1 Example:',data_1)\n",
     "print('Data-2 Example:',data_2)"
@@ -568,7 +569,7 @@
     "# - let's use input arguments to fix the formatting\n",
     "\n",
     "#notice I'm rewriting the variable too\n",
-    "data_1 = pd.read_csv('/content/gdrive/My Drive/EsacapeEarthData/2161623_lc.csv',header=0,delimiter ='\t')\n",
+    "data_1 = pd.read_csv('/content/gdrive/My Drive/EscapeEarthData/2161623_lc.csv',header=0,delimiter ='\t')\n",
     "data_1"
    ]
   },
@@ -597,7 +598,7 @@
     "# our path to the shared folder is long and we may not want to type it everytime\n",
     "# we can save the path and insert it as shown below\n",
     "\n",
-    "mypath = '/content/gdrive/My Drive/EsacapeEarthData'\n",
+    "mypath = '/content/gdrive/My Drive/EscapeEarthData'\n",
     "\n",
     "#let's open yet another data file\n",
     "data_3 = np.load('{}/bls_powers.npy'.format(mypath))\n",
@@ -611,8 +612,8 @@
    },
    "source": [
     "# __How to Save NEW data to our shared folder__\n",
-    "#### _Important Note_: when saving new data always name the file with a clear name followed by '-YourName'. This is so I can resave the folder within my google drive that has unlimited storage, whereas yours will not.\n",
-    "#### FOR EXAMPLE: Using data_3's filename, you would save it as \"bls_powers-Danielle.npy\".  I will then rename & resaved this file as \"bls_powers.npy\" "
+    "#### _Important Note_: when saving new data always name the file with a clear name followed by '-YourName'. And similar to how you opened data, you MUST enter the full path as shown in the cell directly above as the variable mypath and include an necessary subdirectories. I will then resave the new file within my google drive that has unlimited storage, whereas yours will not.\n",
+    "#### FOR EXAMPLE: Using data_3's filename, you would save it as \"/content/gdrive/My Drive/EscapeEarthData/bls_powers-Danielle.npy\".  "
    ]
   },
   {
