--- a/interns/Activities/Data/Activity_4.ipynb
+++ b/interns/Activities/Data/Activity_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Activity-4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJay5VZE2Emtjxz1RMU+c/",
+      "authorship_tag": "ABX9TyPSplUtJQA/JjxVKImZ74yI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,7 +173,7 @@
         "        \n",
         "        return total"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
         "#let's see what that is\n",
         "mytest_A"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +253,7 @@
         "# class variables\n",
         "print('Global info attribute:', mytest_A.collection)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
       "source": [
         "myplot = mytest_A.plot()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -338,7 +338,7 @@
         "myringages = mytest_A.ring_ages(myareas)\n",
         "print('Ring Ages:',myringages)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,8 +416,6 @@
         "            \n",
         "##########################################################################\n",
         "###########Write the __repr__ function on the next line###################\n",
-        "    def __repr__(self):\n",
-        "        return f'{self.name} tree with {len(self.diameters)} tree rings'\n",
         "\n",
         "\n",
         "\n",
@@ -496,7 +494,7 @@
         "        \n",
         "        return total"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +533,7 @@
         "#let's see what that is\n",
         "mytest_B"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,29 +689,9 @@
         "\n",
         "    \n",
         "##########################################################################\n",
-        "###########Write the tree_age function on the next line###################\n",
-        "    def tree_age(self,ring_ages):\n",
-        "        '''\n",
-        "        This is a totally made up calculation for age of tree\n",
-        "        *Disclaimer: the truth is the total number of rings is the age of the tree in years*\n",
-        "        \n",
-        "        Parameters\n",
-        "        ----------\n",
-        "        ring_ages: list\n",
-        "            list of ages of each tree ring output from .ring_ages() method\n",
-        "        \n",
-        "        Returns\n",
-        "        ----------\n",
-        "        age: float\n",
-        "            value of tree age\n",
-        "        '''\n",
-        "        import numpy as np\n",
-        "        \n",
-        "        age = np.sum(ring_ages) *self.height\n",
-        "        \n",
-        "        return age"
+        "###########Write the tree_age function on the next line###################\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -760,7 +738,7 @@
         "mytreeages = mytest_C.tree_age(the_ring_ages)\n",
         "print('\\nOutput from YOUR tree_age class method:',mytreeages)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +804,7 @@
         "print('\\nInstance attributes can vary (and usually do)')\n",
         "print('Example 1: {} \\nExample 2: {}'.format(instance_a1,instance_a2))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
